Refactor general y estructura base de grúas, movimientos y gestión de usuarios

--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,13 @@
   <title>SILCAST</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-  <!-- Cambié el icono a la misma imagen que usas en el header -->
-  <link rel="icon" type="image/png" href="/assets/images/Logo_SF.png">
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <link rel="icon" type="image/png" href="/assets/images/Logo_SF.png">
 </head>
 <body>
 
-  <!-- Esto es un comentario en HTML -->
-  <app-root></app-root>
+    <app-root></app-root>
 </body>
 </html>
